@@ -5,6 +5,7 @@ Upcoming:
 - Wireless router works again
 - Disabling a connector will now immediatelly cause a visual update
 - Fixed recipes and added recipe for connector upgrade kit
+- The connector upgrade kit works again
 
 1.16-3.0.9:
 - Fixed a potential crash when placing a connector next to a hopper
